add tags to post
