# src/routes/post.route.js
@@ -7,8 +7,32 @@ const ROLE = require("../common/role.constant");
 router.post('/create',authMiddleware.isAuthenticated, postController.createPost);
 router.get('/detail/:id',authMiddleware.isAuthenticated, postController.getPostById);
 router.put('/update/:id',authMiddleware.isAuthenticated, postController.updatePost);*/
+router.get('/posts/:id', authMiddleware.authenticateJWT, (req, res) => {
+    /**
+     * #swagger.tags = ['Posts']
+     * #swagger.description = 'Get a post by ID'
+     * #swagger.security = [{ "bearerAuth": [] }]
+     * #swagger.parameters['id'] = { description: 'Post ID' }
+     */
+    postController.getPostById(req, res);
+});
 
-router.post('/', authMiddleware.authenticateJWT,authMiddleware.authorizeRole(ROLE.VIEWER,ROLE.EDITOR,ROLE.ADMIN), (req, res) => {
+router.put('/posts/:id', authMiddleware.authenticateJWT, (req, res) => {
+    /**
+     * #swagger.tags = ['Posts']
+     * #swagger.description = 'Update a post'
+     * #swagger.security = [{ "bearerAuth": [] }]
+     * #swagger.parameters['id'] = { description: 'Post ID' }
+     * #swagger.parameters['updatedPost'] = {
+     *   in: 'body',
+     *   description: 'Updated post information',
+     *   required: true,
+     *   schema: { $ref: '#/definitions/UpdatePost' }
+     * }
+     */
+    postController.updatePost(req, res);
+});
+router.post('/posts', authMiddleware.authenticateJWT, (req, res) => {
     /**
      * #swagger.tags = ['Posts']
      * #swagger.description = 'Get all posts'
@@ -24,7 +48,7 @@ router.post('/', authMiddleware.authenticateJWT,authMiddleware.authorizeRole(ROL
     postController.getAllPost(req, res);
 });
 
-router.post('/', authMiddleware.authenticateJWT,authMiddleware.authorizeRole(ROLE.EDITOR), (req, res) => {
+router.post('/posts', authMiddleware.authenticateJWT, (req, res) => {
     /**
      * #swagger.tags = ['Posts']
      * #swagger.description = 'Create a new post'
@@ -39,31 +63,7 @@ router.post('/', authMiddleware.authenticateJWT,authMiddleware.authorizeRole(ROL
     postController.createPost(req, res);
 });
 
-router.get('/:id', authMiddleware.authenticateJWT,authMiddleware.authorizeRole(ROLE.EDITOR,ROLE.ADMIN), (req, res) => {
-    /**
-     * #swagger.tags = ['Posts']
-     * #swagger.description = 'Get a post by ID'
-     * #swagger.security = [{ "bearerAuth": [] }]
-     * #swagger.parameters['id'] = { description: 'Post ID' }
-     */
-    postController.getPostById(req, res);
-});
 
-router.put('/:id', authMiddleware.authenticateJWT,authMiddleware.authorizeRole(ROLE.EDITOR), (req, res) => {
-    /**
-     * #swagger.tags = ['Posts']
-     * #swagger.description = 'Update a post'
-     * #swagger.security = [{ "bearerAuth": [] }]
-     * #swagger.parameters['id'] = { description: 'Post ID' }
-     * #swagger.parameters['updatedPost'] = {
-     *   in: 'body',
-     *   description: 'Updated post information',
-     *   required: true,
-     *   schema: { $ref: '#/definitions/UpdatePost' }
-     * }
-     */
-    postController.updatePost(req, res);
-});
 
 
 module.exports = router
