# src/routes/route.js
@@ -8,9 +8,9 @@ const userRoutes = require('../routes/user.route');
 const postRoutes = require('../routes/post.route');
 
 // Use the imported routes
-router.use('/categories', categoryRoutes);
-router.use('/tags', tagRoutes);
-router.use('/users', userRoutes);
-router.use('/posts', postRoutes);
+router.use('/api', categoryRoutes);
+router.use('/api', tagRoutes);
+router.use('/api', userRoutes);
+router.use('/api', postRoutes);
 
 module.exports = router;
